VM -> Jre
Signed-off-by: BoykoAlex <alex.boyko@broadcom.com>